k8s/productivity/snapp/service.yml
apiVersion: v1
kind: Service
metadata:
  name: snapp
  namespace: productivity
spec:
  selector:
    app: snapp
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
